# blueprint-hexagonal-rust

./: .gitignore  Cargo.toml  LICENCE  Notes.md  README.md  settings.toml
doc/: domain_schema.drawio  infra_schema.drawio
domain/: Cargo.toml
domain/src/executor/: mod.rs
domain/src/executor/model/: error.rs  mod.rs  model.rs
domain/src/executor/ports/: mod.rs  primary.rs  secondary.rs
domain/src/executor/service/: mod.rs  task_execution.rs
infra/: Cargo.toml
infra/src/: main.rs
infra/src/adapter/: mod.rs
infra/src/adapter/secondary/: database.rs  execution.rs  id_generator.rs  mod.rs  storage.rs
infra/src/adapter/secondary/storage/: database.rs  memory.rs  mod.rs
infra/src/adapter/secondary/storage/database/: mod.rs  schema.rs
infra/src/cli/: mod.rs
infra/src/primary/: cli.rs  mod.rs  settings.rs
infra/src/secondary/: mod.rs
infra/src/secondary/adapter/: execution.rs
infra/src/secondary/adapter/storage/: memory.rs  mod.rs
infra/src/secondary/adapter/storage/database/: commands.rs
migrations/20200329_init_db/: down.sql  up.sql
