[package]
name = "blueprint-hexagonal-infra"
version = "0.1.0"
authors = ["fteychene <francois.teychene@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blueprint-hexagonal-domain = { version = "0.1", path = "../domain"}
im = "14.3"
anyhow = "1.0"
uuid = {version = "0.8", features = ["v4"] }
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }